# Cross_Modell_Feature

./: .gitignore  README.md  pyproject.toml
env/: Dockerfile
notebooks/: OCR_Pipeline.ipynb  OCR_Preprocessing.ipynb  data_exploration.ipynb  load_data.ipynb  test_ocr.ipynb
src/: dataloader.py  ocr_pipeline.py  utils.py
