[tool.poetry]
name = "cross_modal_feature_docclass"
version = "1.0.0"
description = ""
authors = ["Maximilian Herrmann <117770631+herrmannmaML@users.noreply.github.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "3.11.7"
seaborn = "^0.13.2"
matplotlib = "^3.8.4"
tqdm = "^4.66.2"
tensorflow = "2.15.0"
nltk = "^3.8.1"
transformers = "^4.39.3"
datasets = "^2.18.0"
tf2onnx = "^1.16.1"
pytesseract = "^0.3.10"
opencv-contrib-python = "^4.9.0.80"
calflops = "^0.2.9"
scikit-image = "^0.23.1"
stanza = "^1.8.1"
pyspellchecker = "^0.8.1"
symspellpy = "^6.7.7"
deskew = "^1.5.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
pytest = "^7.3.1"
ipykernel = "^6.22.0"
pandas = "2.1.4"
pyarrow = "^14.0.1"
numpy = "1.26.2"
scipy = "^1.11.4"
scikit-learn = "^1.3.2"
mlflow = "^2.11.3"


[tool.black]
line-length = 90
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.vs
)/
'''

[tool.isort]
profile = "black"
line_length = 90
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".gitignore", ".python-version", "README.md"]
skip_glob = [".vs/*", ".git/*"]

[tool.flake8]
extend-ignore = ["E203", "E266", "W503", "E402", "E501"]
max-line-length = 90
max-complexity = 18
select = ["B", "C", "E", "F", "W", "T4", "B9"]
 per-file-ignores = """
    """


[tool.nbqa.addopts]
flake8 = [
    "--max-line-length=90",
    "--max-complexity=18",
    "--exclude=.git, .vs, .venv, data",
    "--ignore=E203, E266, E402, E501, W503",
    "--select=B,C,E,F,W,T4,B9",
]

black = [
    "--line-length=90",
]

isort = [
    "--profile=black",
    "--line-length=90",
    "--use-parentheses",
    "--multi-line=3",
    "--force-grid-wrap=0",
    "--ensure-newline-before-comments",
]