[tool.poetry]
name = "cross_modal_feature_docclass"
version = "1.0.0"
description = ""
authors = ["Maximilian Herrmann <117770631+herrmannmaML@users.noreply.github.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "3.11.7"
pandas = "2.1.4"
pyarrow = "^14.0.1"
seaborn = "^0.13.2"
matplotlib = "^3.9.0"
tqdm = "^4.66.4"
nltk = "^3.8.1"
scipy = "^1.14.0"
numpy = "1.26.2"
scikit-learn = "^1.5.0"
scikit-image = "^0.24.0"
transformers = "^4.42.2"
datasets = "2.18.0"
opencv-contrib-python = "^4.10.0.84"
pytesseract = "^0.3.10"
deskew = "^1.5.1"
calflops = "^0.3.2"
torch-summary = "^1.4.5"
stanza = "^1.8.2"
symspellpy = "^6.7.7"
pyspellchecker = "^0.8.1"
pytorch-lightning = "^2.3.1"

timm = "^1.0.7"
[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
pytest = "^7.3.1"
ipykernel = "^6.22.0"


[tool.black]
line-length = 90
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.vs
)/
'''

[tool.isort]
profile = "black"
line_length = 90
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".gitignore", ".python-version", "README.md"]
skip_glob = [".vs/*", ".git/*"]

[tool.flake8]
extend-ignore = ["E203", "E266", "W503", "E402", "E501"]
max-line-length = 90
max-complexity = 18
select = ["B", "C", "E", "F", "W", "T4", "B9"]
 per-file-ignores = """
    """


[tool.nbqa.addopts]
flake8 = [
    "--max-line-length=90",
    "--max-complexity=18",
    "--exclude=.git, .vs, .venv, data",
    "--ignore=E203, E266, E402, E501, W503",
    "--select=B,C,E,F,W,T4,B9",
]

black = [
    "--line-length=90",
]

isort = [
    "--profile=black",
    "--line-length=90",
    "--use-parentheses",
    "--multi-line=3",
    "--force-grid-wrap=0",
    "--ensure-newline-before-comments",
]